[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pingwatch"
version = "0.1.0"
description = "Modern Smokeping-like network latency monitor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "k6a"}]
dependencies = [
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "dnspython>=2.6",
    "apscheduler>=3.10,<4.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
pingwatch = "pingwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
